[tool.poetry]
name = "glados-voice-assistant-bot"
version = "0.1.0"
description = ""
authors = ["DerangedDoffy"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
PyAudio = "^0.2.11"
playsound = "^1.3.0"
gTTS = "^2.2.3"
DateTime = "^4.3"
PyAutoGUI = "^0.9.53"
wheel = "^0.37.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
